--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 # Auto detect text files and perform LF normalization
 *        text=auto
-
 *.cs     text diff=csharp
 *.java   text diff=java
 *.html   text diff=html
@@ -10,12 +9,11 @@
 *.css    text eol=lf
 *.js     text eol=lf
 *.sql    text
-
 *.sh     text eol=lf
 *.mustache text eol=lf
-
 *.bat    text eol=crlf
 *.cmd    text eol=crlf
 *.vcxproj text merge=union eol=crlf
 *.csproj text merge=union eol=crlf
 *.sln    text merge=union eol=crlf
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
