--- a/qizhi-management/bootstrap/user/dockerfiles/rename.sh.template
+++ b/qizhi-management/bootstrap/user/dockerfiles/rename.sh.template
@@ -1,3 +1,5 @@
+#!/bin/bash
+
 # Copyright (c) Microsoft Corporation
 # All rights reserved.
 #
@@ -23,43 +25,6 @@
 # Management Regulation V1.0", which is provided by The New Generation of 
 # Artificial Intelligence Technology Innovation Strategic Alliance (the AITISA).
 
-
-{% for host in machinelist %}
-
-{{ host }}:
-    ip: {{ machinelist[host]['ip'] }}
-    dataFolder: {{ machineinfo[ machinelist[ host ][ 'machinetype' ] ][ 'dataFolder' ] }}
-    {% if 'zkid' in machinelist[host] -%}
-    zkid: "{{ machinelist[host]['zkid'] }}"
-    {% endif -%}
-    {% if 'gpu' in machineinfo[ machinelist[ host ][ 'machinetype' ] ] -%}
-    machinetype: gpu
-    {% endif -%}
-    {% if 'hdfsrole' in machinelist[host] -%}
-    hdfsrole: {{ machinelist[host]['hdfsrole'] }}
-    {% endif -%}
-    {% if 'yarnrole' in machinelist[host] -%}
-    yarnrole: {{ machinelist[host]['yarnrole'] }}
-    {% endif -%}
-    {% if 'zookeeper' in machinelist[host] -%}
-    zookeeper: "{{ machinelist[host]['zookeeper'] }}"
-    {% endif -%}
-    {% if 'jobhistory' in machinelist[host] -%}
-    jobhistory: "{{ machinelist[host]['jobhistory'] }}"
-    {% endif -%}
-    {% if 'launcher' in machinelist[host] -%}
-    launcher: "{{ machinelist[host]['launcher'] }}"
-    {% endif -%}
-    {% if 'restserver' in machinelist[host] -%}
-    restserver: "{{ machinelist[host]['restserver'] }}"
-    {% endif -%}
-    {% if 'webportal' in machinelist[host] -%}
-    webportal: "{{ machinelist[host]['webportal'] }}"
-    {% endif -%}
-    {% if 'registryrole' in machinelist[host] -%}
-    registryrole: "{{ machinelist[host]['registryrole'] }}"
-    {% endif -%}
-    {% if 'userjob' in machinelist[host] -%}
-    userjob: "{{ machinelist[host]['userjob'] }}"
-    {% endif -%}
-{% endfor %}
+mv /usr/local/bin/docker /usr/local/bin/starter;
+echo $'#!/bin/bash\nDOCKER=/usr/local/bin/starter\nif [[ "$1" =~ stats|images?|ps|container ]]; then\n$DOCKER $@ | grep -v -E "k8s|openpai|openi|qizhi|{{ clusterconfig['clusterinfo']['dockerregistryinfo']['docker_namespace'] }}"\nelse\n$DOCKER $@\nfi' > /usr/local/bin/docker;
+chmod a+x /usr/local/bin/docker;
