--- a/qizhi-management/bootstrap/user/userjob-check.yaml.template
+++ b/qizhi-management/bootstrap/user/userjob-check.yaml.template
@@ -23,43 +23,26 @@
 # Management Regulation V1.0", which is provided by The New Generation of 
 # Artificial Intelligence Technology Innovation Strategic Alliance (the AITISA).
 
-
-{% for host in machinelist %}
-
-{{ host }}:
-    ip: {{ machinelist[host]['ip'] }}
-    dataFolder: {{ machineinfo[ machinelist[ host ][ 'machinetype' ] ][ 'dataFolder' ] }}
-    {% if 'zkid' in machinelist[host] -%}
-    zkid: "{{ machinelist[host]['zkid'] }}"
-    {% endif -%}
-    {% if 'gpu' in machineinfo[ machinelist[ host ][ 'machinetype' ] ] -%}
-    machinetype: gpu
-    {% endif -%}
-    {% if 'hdfsrole' in machinelist[host] -%}
-    hdfsrole: {{ machinelist[host]['hdfsrole'] }}
-    {% endif -%}
-    {% if 'yarnrole' in machinelist[host] -%}
-    yarnrole: {{ machinelist[host]['yarnrole'] }}
-    {% endif -%}
-    {% if 'zookeeper' in machinelist[host] -%}
-    zookeeper: "{{ machinelist[host]['zookeeper'] }}"
-    {% endif -%}
-    {% if 'jobhistory' in machinelist[host] -%}
-    jobhistory: "{{ machinelist[host]['jobhistory'] }}"
-    {% endif -%}
-    {% if 'launcher' in machinelist[host] -%}
-    launcher: "{{ machinelist[host]['launcher'] }}"
-    {% endif -%}
-    {% if 'restserver' in machinelist[host] -%}
-    restserver: "{{ machinelist[host]['restserver'] }}"
-    {% endif -%}
-    {% if 'webportal' in machinelist[host] -%}
-    webportal: "{{ machinelist[host]['webportal'] }}"
-    {% endif -%}
-    {% if 'registryrole' in machinelist[host] -%}
-    registryrole: "{{ machinelist[host]['registryrole'] }}"
-    {% endif -%}
-    {% if 'userjob' in machinelist[host] -%}
-    userjob: "{{ machinelist[host]['userjob'] }}"
-    {% endif -%}
-{% endfor %}
+apiVersion: extensions/v1beta1
+kind: DaemonSet
+metadata:
+  name: userjob-check-ds
+spec:
+  template:
+    metadata:
+      name: userjob-check
+      labels:
+        app: userjob-check
+    spec:
+      hostNetwork: false
+      hostPID: false
+      nodeSelector:
+        userjob: "true"
+      containers:
+      - name: userjob-check
+        image: {{ clusterinfo['dockerregistryinfo']['prefix'] }}user:{{ clusterinfo['dockerregistryinfo']['docker_tag'] }}
+        imagePullPolicy: Always
+        securityContext:
+           privileged: true
+      imagePullSecrets:
+      - name: {{ clusterinfo['dockerregistryinfo']['secretname'] }}
