--- a/qizhi-management/service.yaml
+++ b/qizhi-management/service.yaml
@@ -102,6 +102,14 @@ imagelist:
       - None
     prerequisite: None
 
+  user:
+    copy:
+      - ../user
+    templatelist:
+      - check_user.py
+      - secretary-info.json
+    prerequisite: None
+
 # Before starting your service, ensure the kubectl has been installed on your host.
 # If you want to remove a certain service, comment it in the servicelist.
 servicelist:
@@ -230,3 +238,31 @@ servicelist:
     startscript: start.sh
     stopscript: cleanup.sh
 
+  registry:
+    prerequisite:
+      - cluster-configuration
+    templatelist:
+      - node-label.sh
+      - kube-registry-proxy.yaml
+      - kube-registry.yaml
+      - cleanup.sh
+    startscript: start.sh
+    stopscript: cleanup.sh
+
+  user:
+    prerequisite:
+      - cluster-configuration
+      - registry
+      - rest-server
+    templatelist:
+      - node-label.sh
+      - userjob-check.yaml
+      - admin-info.json
+      - secretary-create-info.json
+      - secretary-info.json
+      - user.py
+      - start.sh
+      - dockerfiles/rename.sh
+      - cleanup.sh
+    startscript: start.sh
+    stopscript: cleanup.sh
