--- a/qizhi-management/src/user/secretary-info.json.template
+++ b/qizhi-management/src/user/secretary-info.json.template
@@ -1,5 +1,5 @@
 {
 	"username": "secretary",
-	"password": "{{ clusterinfo['userinfo']['secretary_password'] }}",
+	"password": "{{ clusterconfig['clusterinfo']['userinfo']['secretary_password'] }}",
 	"expiration": "600"
 }
