--- a/webportal/package.json
+++ b/webportal/package.json
@@ -11,7 +11,8 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "yarn": "yarn --ignore-engines"
   },
   "dependencies": {
     "echarts": "^4.1.0",
@@ -23,6 +24,7 @@
     "vue-markdown-highlight": "^1.0.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "app-root-path": "2.0.1",
     "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
     "babel-core": "^6.22.1",
@@ -39,12 +41,17 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "1.18.3",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "compression": "1.7.3",
+    "cookie-parser": "1.4.4",
     "copy-webpack-plugin": "^4.0.1",
     "countup": "^1.8.2",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "dotenv": "6.2.0",
+    "express": "4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -53,8 +60,10 @@
     "install": "^0.11.0",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "joi": "^13.0.2",
     "jquery": "^3.3.1",
     "json-editor": "^0.7.28",
+    "morgan": "1.9.1",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "npm": "^6.1.0",
@@ -67,6 +76,7 @@
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
+    "serve-favicon": "^2.5.0",
     "shelljs": "^0.7.6",
     "text-loader": "0.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
@@ -81,7 +91,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "winston": "3.2.1"
   },
   "engines": {
     "node": ">= 6.0.0",
