--- a/qizhi-management/src/user/check_user.py.template
+++ b/qizhi-management/src/user/check_user.py.template
@@ -32,10 +32,10 @@ import urllib2
 import time
 import logging
 
+logging.basicConfig(level=logging.DEBUG)
 logger = logging.getLogger(__name__)
-logger.basicConfig(level=logging.DEBUG)
 
-rest_server_port = {{ clusterinfo['restserverinfo']['server_port'] }}
+rest_server_port = {{ clusterconfig['clusterinfo']['restserverinfo']['server_port'] }}
 url_user_list = "http://localhost:4001/v2/keys/users"
 url_token = "http://localhost:{0}/api/v1/token".format(rest_server_port)
 url_user = "http://localhost:{0}/api/v1/user".format(rest_server_port)
