--- a/qizhi-management/src/user/dockerfile
+++ b/qizhi-management/src/user/dockerfile
@@ -30,7 +30,7 @@ RUN apt-get -y update && \
     apt-get -y install python \
         python-pip \
         python-dev \
-        python-jinja2 \
+        python-jinja2 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
